--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -9,23 +9,221 @@
 {% include 'navbar-dshop.html' %}
 
 <main class="dshop">
-  <section class="title-section screen-size-segment">
+  <section class="title-section">
+    <div class="container d-flex flex-column align-items-center justify-content-center">
+      <h1 class="title big">{{gettext("Create your free online store in minutes & harness the power of a decentralized platform")}}</h1>
+      <div class="sub-title">{{gettext("Run and grow your business with Dshop, a customizable and open-source e-commerce platform built on the decentralized web.  Get started for free and launch your store in a day.")}}</div>
+      <a 
+        class="primary-button" 
+        href="https://dshop.originprotocol.com"
+        target="_blank"
+        rel="noreferrer noopener"
+      >{{ gettext("Try it – it’s free") }}</a>
+    </div>
+  </section>
+
+  <section class="people-image-section d-shop d-flex justify-content-center align-items-start">
+    <img
+      class="people-image w-100"
+      src="/static/img/dshop/people-images.jpg"
+      srcset="/static/img/dshop/people-images@2x.jpg 2x, /static/img/dshop/people-images@3x.jpg 3x"
+    />
+  </section>
+
+  <section class="support-section">
+    <div class="container d-flex flex-column align-items-center">
+      <h1 class="title mb-2">{{gettext("We’re here to support you–no matter what business you’re in")}}</h1>
+      <div class="sub-title">{{gettext("Create an ecommerce website backed by powerful tools that help you find customers and drive sales.")}}</div>
+      <div class="image-holder">
+        <img
+          class="support-image left parallax-scroll"
+          src="/static/img/dshop/dshop-art-1.jpg"
+          srcset="/static/img/dshop/dshop-art-1@2x.jpg 2x, /static/img/dshop/dshop-art-1@3x.jpg 3x"
+        />
+        <img
+          class="support-image center"
+          src="/static/img/dshop/dshop-hardware-1.jpg"
+          srcset="/static/img/dshop/dshop-hardware-1@2x.jpg 2x, /static/img/dshop/dshop-hardware-1@3x.jpg 3x"
+        />
+        <img
+          class="support-image right parallax-scroll"
+          src="/static/img/dshop/dshop-restaurant-1.jpg"
+          srcset="/static/img/dshop/dshop-restaurant-1@2x.jpg 2x, /static/img/dshop/dshop-restaurant-1@3x.jpg 3x"
+        />
+      </div>
+    </div>
+  </section>
+
+  <section class="support-section-2 d-flex flex-column align-items-center justify-content-end">
+    <h1 class="title">{{gettext("The power behind your success")}}</h1>
+    <div class="container d-flex flex-wrap justify-content-center">
+      <div class="info-box d-flex flex-column">
+        <div class="icon-holder d-flex flex-column align-items-start">
+          <img src="/static/img/dshop/store-icon-white.svg"/>
+        </div>
+        <div class="emphasised mb-2">{{gettext("Multiple shops, 1 account")}}</div>
+        <div class="text">{{gettext("Launch a decentralised shop in a day - no commitments or long-term contracts.")}}</div>
+      </div>
+      <div class="info-box d-flex flex-column">
+        <div class="icon-holder d-flex flex-column align-items-start">
+          <img src="/static/img/dshop/eth-icon.svg"/>
+        </div>
+        <div class="emphasised mb-2">{{gettext("Easy crypto payments")}}</div>
+        <div class="text">{{gettext("Accept every way your customers want to pay.  Fast, secure payments with no extra fees.")}}</div>
+      </div>
+      <div class="info-box d-flex flex-column">
+        <div class="icon-holder d-flex flex-column align-items-start">
+          <img src="/static/img/dshop/ipfs-icon.svg"/>
+        </div>
+        <div class="emphasised mb-2">{{gettext("Secure, distributed data")}}</div>
+        <div class="text">{{gettext("Keep your data safe with IPFS, a resilient, censorship resistant system of file storage.")}}</div>
+      </div>
+      <div class="info-box d-flex flex-column">
+        <div class="icon-holder d-flex flex-column align-items-start">
+          <img src="/static/img/dshop/lego-icon.svg"/>
+        </div>
+        <div class="emphasised mb-2">{{gettext("Infinitely extensible")}}</div>
+        <div class="text">{{gettext("Integrate with your favorite third party services or build your very own.")}}</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="integrations" class="tools-section d-flex flex-column align-items-center">
+    <h1 class="title mb-2">{{gettext("Work with all your existing tools")}}</h1>
+    <div class="sub-title">{{gettext("Explore integrations to speed up your workflow, or build your own custom integrations on our open source platform.")}}</div>
+    <div class="brands container d-flex flex-wrap justify-content-center">
+      <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://stripe.com/" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/stripe-icon.svg"/>
+        </a>
+      </div>
+      <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://uphold.com//" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/uphold-icon.svg"/>
+        </a>
+      </div>
+      <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://www.printful.com/" target="_blank" rel="noopener noreferrer">
+          <img
+            src="/static/img/dshop/printful.png"
+            srcset="/static/img/dshop/printful@2x.png 2x, /static/img/dshop/printful@3x.png 3x"
+          />
+        </a>
+      </div>
+      <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://sendgrid.com/" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/sendgrid.svg"/>
+        </a>
+      </div>
+      <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://aws.amazon.com/" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/aws.svg"/>
+        </a>
+      </div>
+      <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://www.mailgun.com/" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/mailgun.svg"/>
+        </a>
+      </div>
+    </div>
+    <div class="sub-title">{{gettext("…and many more on the way!")}}</div>
+  </section>
+
+  <section class="build-section">
     <div class="container">
       <div class="content-wrapper">
-        <h1 class="title big text-left">{{gettext("Create your decentralized online store")}}</h1>
-        <div class="sub-title">{{gettext("Run and grow your business with Dshop, a customizable and open-source e-commerce platform. Get started for free.")}}</div>
-        <a 
-          class="primary-button" 
-          href="https://dshop.originprotocol.com"
-          target="_blank"
-          rel="noreferrer noopener"
-        >{{ gettext("Try Dshop") }}</a>
+        <h1 class="title text-left">{{gettext("Build on top of the world’s first decentralized e-commerce platform")}}</h1>
+        <div class="sub-title">{{gettext("Join our rapidly growing global community of developers and add your own features to our ever-expanding platform.")}}</div>
+        <div class="d-flex align-items-center">
+          <img src="/static/img/dshop/discord.svg"/>
+          <a 
+            href="https://discord.com/invite/jyxpUSe"
+            target="_blank"
+            rel="noreferrer noopener"
+          >{{ gettext("Join us on Discord") }} &gt;</a>
+        </div>
       </div>
       <img src="/static/img/dshop/hero-graphic.svg" class="hero-graphic" />
     </div>
   </section>
 
-  <section class="features-section">
+  <section>
+    <div class="customers">
+      <h3>{{gettext("Our Customers")}}</h3>
+      <div class="sub-title">
+        {{gettext("Meet the companies who are choosing Dshop to build and grow their decentralized online stores")}}
+      </div>
+      <div class="customer-logos">
+        <a href="https://store.brave.com" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/brave-logo.svg" class="brave-logo">
+        </a>
+        <a href="https://kyber.ogn.app/" target="_blank" rel="noopener noreferrer">
+          <img class="swag" src="/static/img/product/kyber-network.svg" class="kyber"/>
+        </a>
+        <a href="https://store.solana.com" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/dshop/solana-logo.png"
+            srcset="/static/img/dshop/solana-logo@2x.png 2x,
+                    /static/img/dshop/solana-logo@3x.png 3x"
+            class="solana-logo">
+        </a>
+        <a href="https://store.contentos.io/" target="_blank" rel="noopener noreferrer">
+          <img
+            class="swag contentos"
+            src="/static/img/dshop/contentos.jpg"
+            srcset="/static/img/dshop/contentos@2x.jpg 2x, /static/img/dshop/contentos@3x.jpg 3x"
+          />
+        </a>
+        <a href="https://ternio.ogn.app/" target="_blank" rel="noopener noreferrer">
+          <img
+            class="swag ternio"
+            src="/static/img/dshop/ternio.jpg"
+            srcset="/static/img/dshop/ternio@2x.jpg 2x, /static/img/dshop/ternio@3x.jpg 3x"
+          />
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <section class="succeed-section">
+    <div class="container d-flex flex-column align-items-center">
+      <h3>{{gettext("Here to help you succeed")}}</h3>
+      <div class="sub-title">
+        {{gettext("Speak with a real person when something’s not right. You can email our in-house support anytime, 24/7.")}}
+        <br />
+        {{gettext("Still have more questions? Feel free to contact us.")}}
+      </div>
+      <a href="mailto:dshop@originprotocol.com" target="_blank" rel="noopener noreferrer">
+        {{gettext("Contact Us")}} &gt;
+      </a>
+    </div>
+  </section>
+
+  <section class="success-stories">
+    <div class="container d-flex flex-column">
+      <h3>{{gettext("Dshop success stories")}}</h3>
+      <div class="success-list d-flex flex-wrap justify-content-center">
+        <div class="gradient-box">
+          <img src="/static/img/dshop/jackielim.png"
+            srcset="/static/img/dshop/jackielim@2x.png 2x,
+                    /static/img/dshop/jackielim@3x.png 3x"
+            class="headshot"
+          >
+          <div class="success-text">
+            {{gettext("“[With Dshop] we had a swift and easy experience establishing the Contentos online e-commerce store.”")}}
+          </div>
+          <div class="success-signature">
+            {{gettext("- Jackie Lim , Senior B.D. Director, Contentos")}}
+          </div>
+          <img
+            class="contentos"
+            src="/static/img/dshop/contentos.jpg"
+            srcset="/static/img/dshop/contentos@2x.jpg 2x, /static/img/dshop/contentos@3x.jpg 3x"
+          />
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--<section class="features-section">
     <div class="container">
       <div id="features" class="features">
         <h3>{{gettext("Features & Benefits")}}</h3>
@@ -86,40 +284,6 @@
             class="laptop">
 
       </div>
-      <div id="customers" class="customers">
-        <h3>{{gettext("Our Customers")}}</h3>
-        <div class="sub-title">
-          {{gettext("Meet the companies who are choosing Dshop to build and grow their decentralized online stores")}}
-        </div>
-        <div class="customer-logos">
-          <a href="https://store.brave.com" target="_blank" rel="noopener noreferrer">
-            <img src="/static/img/dshop/brave-logo.svg" class="brave-logo">
-          </a>
-          <a href="https://kyber.ogn.app/" target="_blank" rel="noopener noreferrer">
-            <img class="swag mt-4 mt-md-3" src="/static/img/product/kyber-network.svg" class="kyber"/>
-          </a>
-          <a href="https://store.solana.com" target="_blank" rel="noopener noreferrer">
-            <img src="/static/img/dshop/solana-logo.png"
-              srcset="/static/img/dshop/solana-logo@2x.png 2x,
-                      /static/img/dshop/solana-logo@3x.png 3x"
-              class="solana-logo">
-          </a>
-          <a href="https://store.contentos.io/" target="_blank" rel="noopener noreferrer">
-            <img
-              class="swag mt-4 mt-md-3 contentos"
-              src="/static/img/product/contentos.png"
-              srcset="/static/img/product/contentos@2x.png 2x, /static/img/product/contentos@3x.png 3x"
-            />
-          </a>
-          <a href="https://ternio.ogn.app/" target="_blank" rel="noopener noreferrer">
-            <img
-              class="swag mt-4 mt-md-3 ternio"
-              src="/static/img/product/ternio.png"
-              srcset="/static/img/product/ternio@2x.png 2x, /static/img/product/ternio@3x.png 3x"
-            />
-          </a>
-        </div>
-
         <div class="gradient-box contact-box">
           <h3>{{gettext("Here to help you succeed")}}</h3>
           <div class="sub-title d-none d-md-block">
@@ -145,16 +309,16 @@
 
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="demo-section">
-    <div class="subtitle">{{gettext("Ready to start selling for free?")}}</div>
+    <div class="subtitle">{{gettext("Ready to start selling today?")}}</div>
     <a 
       class="primary-button" 
       href="https://dshop.originprotocol.com"
       target="_blank"
       rel="noreferrer noopener"
-    >{{ gettext("Try Dshop") }}</a>
+    >{{ gettext("Try it – it’s free") }}</a>
   </section>
 
   {% include 'footer.html' %}
