add mobile styles for landing page

--- a/static/css/pages/dshop.css
+++ b/static/css/pages/dshop.css
@@ -533,6 +533,129 @@
 }
 
 @media (max-width: 768px) {
+  .dshop .title-section h1 {
+    font-size: 24px;
+    line-height: 1.25;
+    margin-bottom: 19px;
+  }
+
+  .dshop .title-section .sub-title {
+    font-size: 13px;
+    line-height: 1.38;
+    margin-bottom: 32px;
+  }
+
+  .dshop .title-section {
+    padding-bottom: 57px;
+  }
+
+  .dshop .title-section .container {
+    min-height: 350px;
+  }
+
+  .dshop .support-section {
+    min-height: 275px;
+  }
+
+  .dshop .support-section .support-image.left,
+  .dshop .support-section .support-image.right {
+    top: 60px;
+  }
+
+  .dshop .support-section-2 .title {
+    margin-top: 115px;
+    font-size: 18px;
+    margin-bottom: 45px;
+  }
+
+  .dshop .support-section-2 .info-box {
+    max-width: 150px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 32px;
+  }
+
+  .dshop .support-section-2 .info-box .icon-holder {
+    min-height: 76px;
+  }
+
+  .dshop .support-section-2 .info-box .icon-holder img {
+    max-width: 44px;
+  }
+
+  .dshop .support-section-2 .info-box .emphasised {
+    font-size: 13px;
+  }
+
+  .dshop .support-section-2 .info-box .text {
+    font-size: 13px;
+  }
+
+  .dshop .support-section .title {
+    margin-top: 33px;
+    font-size: 18px;
+    font-weight: normal;
+    margin-bottom: 7px;
+  }
+
+  .dshop .support-section .sub-title {
+    font-family: Lato;
+    font-size: 13px;
+    line-height: 1.38;
+    text-align: center;
+    margin-bottom: 28px;
+  }
+
+  .dshop .support-section .support-image {
+    height: 141px;
+  }
+
+  .dshop .tools-section {
+    margin-bottom: 10px;
+  }
+
+  .dshop .tools-section .title {
+    font-size: 18px;
+    margin-bottom: 12px;
+    margin-top: 43px;
+  }
+
+  .dshop .tools-section .sub-title {
+    font-size: 13px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+  }
+
+  .dshop .tools-section .brand-box {
+    min-width: 62px;
+    min-height: 62px;    
+  }
+
+  .dshop .tools-section .stripe {
+    height: 39px;
+  }
+
+  .dshop .tools-section .uphold {
+    height: 45px;
+  }
+
+  .dshop .tools-section .printful {
+    height: 23px;
+  }
+
+  .dshop .tools-section .sendgrid {
+    height: 37px;
+  }
+
+  .dshop .tools-section .aws {
+    height: 40px;
+  }
+
+  .dshop .tools-section .mailgun {
+    height: 37px;
+  }
+
   .dshop .build-section {
     overflow: hidden;
   }
@@ -590,13 +713,49 @@
     margin: 0.25rem 0;
   }
 
+  .dshop .customers h3 {
+    margin-top: 40px;
+    font-size: 18px;
+    margin-bottom: 14px;
+  }
+
+  .dshop .customers .sub-title {
+    font-size: 13px;
+    font-weight: normal;
+    margin-bottom: 43px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
   .dshop .customer-logos {
-    flex-direction: column;
+    max-width: 90%;
+    margin-bottom: 51px;
   }
 
   .dshop .customer-logos img {
-    margin: 1.25rem 0;
+    margin: 16px;
   }
+
+  .dshop .customer-logos .brave-logo {
+    height: 25px;
+  }
+
+  .dshop .customer-logos .kyber {
+    height: 29px;
+  }
+
+  .dshop .customer-logos .solana-logo {
+    height: 13px;
+  }
+
+  .dshop .customer-logos .contentos {
+    height: 24px;
+  }
+
+  .dshop .customer-logos .ternio {
+    height: 16px;
+  }
+
 
   .dshop .features-list .feature-box {
     display: flex;
@@ -625,7 +784,53 @@
     font-size: 0.875rem;
   }
 
-  .dshop .customers h3 {
-    margin-top: 0.5rem;
+  .dshop .succeed-section {
+    padding: 43px 20px 50px 20px;
+  }
+
+  .dshop .succeed-section h3 {
+    font-size: 18px;
+    margin-bottom: 18px;
+  }
+
+  .dshop .succeed-section .sub-title {
+    font-size: 13px;
+    line-height: 1.38;
+  }
+
+  .dshop .success-stories {
+    padding: 42px 20px 30px 20px;
+  }
+
+  .dshop .success-stories h3 {
+    font-size: 18px;
+    margin-bottom: 18px;
+  }
+
+  .dshop .success-stories .gradient-box {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .dshop .success-stories .success-text {
+    font-size: 13px;
+    margin-bottom: 15px;
+  }
+
+  .dshop .success-stories .success-signature {
+    font-size: 13px;
+  }
+
+  .dshop .success-stories .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .dshop .demo-section .subtitle {
+    font-size: 18px;
+  }
+
+  .dshop .demo-section {
+    height: 230px;
   }
 }
