--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -54,8 +54,8 @@
     </div>
   </section>
 
-  <section class="support-section-2 d-flex flex-column align-items-center justify-content-end">
-    <h1 class="title">{{gettext("The power behind your success")}}</h1>
+  <section id="features" class="support-section-2 d-flex flex-column align-items-center justify-content-end">
+    <h1 class="title">{{gettext("A better way to do online commerce. Run your business on the new web.")}}</h1>
     <div class="container d-flex flex-wrap justify-content-center">
       <div class="info-box d-flex flex-column">
         <div class="icon-holder d-flex flex-column align-items-start">
