add paypal back to suppoted features

--- a/static/css/pages/dshop.css
+++ b/static/css/pages/dshop.css
@@ -693,6 +693,10 @@
     height: 45px;
   }
 
+  .dshop .tools-section .paypal {
+    height: 42px;
+  }
+
   .dshop .tools-section .printful {
     height: 23px;
   }
