--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -103,6 +103,11 @@
         </a>
       </div>
       <div class="brand-box d-flex align-items-center justify-content-center">
+        <a href="https://paypal.com//" target="_blank" rel="noopener noreferrer">
+          <img class="paypal" src="/static/img/dshop/paypal-icon.svg"/>
+        </a>
+      </div>
+      <div class="brand-box d-flex align-items-center justify-content-center">
         <a href="https://www.printful.com/" target="_blank" rel="noopener noreferrer">
           <img
             class="printful"
