do a style revision on dshop page

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -124,3 +124,9 @@ footer .tooltip_hover .tooltiptext {
 footer .tooltip_hover:hover .tooltiptext {
   visibility: visible;
 }
+
+@media (max-width: 768px) {
+  footer {
+    padding: 2.75rem 0;
+  }
+}
