--- a/static/css/pages/dshop.css
+++ b/static/css/pages/dshop.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .dshop section {
   display: inline-block;
   width: 100%;
@@ -9,8 +13,8 @@
   font-size: 0.875rem;
   text-align: center;
   color: var(--white);
-  padding: 0.5rem 0.75rem;
-  margin: 0 0.5rem;
+  padding: 0.25rem 0.75rem;
+  margin-left: 20px;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -23,6 +27,10 @@
   display: list-item;
 }
 
+.dshop .title-section .primary-button {
+  margin-bottom: 140px;
+}
+
 .dshop .primary-button {
   border-radius: 5px;
   box-shadow: 5px 5px 8px 0 #0065d2, -3px -3px 6px 0 #2a92ff, inset 3px 3px 2px 0 #0e4d90, inset -3px -3px 2px 0 #021d3a;
@@ -31,7 +39,7 @@
   font-weight: bold;
   text-align: center;
   padding: 0.8rem 2rem;
-  margin: 0.5rem 0;
+  margin-top: 0.5rem;
   color: var(--white);
   text-decoration: none;
   transition: background-image 0.3s ease;
@@ -80,7 +88,7 @@
 }
 
 .dshop .title-section .container {
-  min-height: 500px;
+  min-height: 516px;
 }
 
 .dshop .title-section h1 {
@@ -89,6 +97,7 @@
   color: white;
   text-align: center;
   margin-bottom: 23px;
+  max-width: 820px;
 }
 
 .dshop .title-section .sub-title {
@@ -97,6 +106,9 @@
   color: white;
   text-align: center;
   margin-bottom: 40px;
+  max-width: 692px;
+  font-weight: normal;
+  line-height: 1.31;
 }
 
 .dshop .people-image-section {
@@ -105,12 +117,15 @@
 }
 
 .dshop .support-section {
-  background-color: white;
+  background-color: #f6fafd;
   min-height: 615px;
 }
 
 .dshop .support-section .image-holder {
   position: relative;
+  width: 448px;
+  height: 517px;
+  margin-bottom: -180px;
 }
 
 .dshop .support-section .support-image {
@@ -118,7 +133,11 @@
 }
 
 .dshop .support-section .support-image.center {
-  margin-bottom: -180px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
 
 .dshop .support-section .support-image.left,
@@ -143,6 +162,9 @@
 
 .dshop .support-section .sub-title {
   margin-bottom: 70px;
+  font-weight: normal;
+  line-height: 1.31;
+  color: #666666;
 }
 
 .dshop .support-section-2 {
@@ -181,7 +203,8 @@
 }
 
 .dshop .tools-section {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+  background-color: #f6fafd;
 }
 
 .dshop .tools-section .title {
@@ -192,12 +215,15 @@
 }
 
 .dshop .tools-section .brands {
-  margin-bottom: 45px;
+  margin-bottom: 60px;
   max-width: 660px;
 }
 
 .dshop .tools-section .sub-title {
   margin-bottom: 25px;
+  font-weight: normal;
+  line-height: 1.31;
+  color: #666666;
 }
 
 .dshop .tools-section .brand-box {
@@ -258,8 +284,11 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  top: 30px;
   z-index: -1;
+}
+
+.dshop .customers-section {
+  background-color: #f6fafd;
 }
 
 .dshop .demo-section {
@@ -331,6 +360,9 @@
   font-family: Lato;
   font-size: 1rem;
   text-align: center;
+  color: #666666;
+  font-weight: normal;
+  line-height: 1.31;
   color: #666666;
 }
 
@@ -588,12 +620,14 @@
     line-height: 1.25;
     margin-bottom: 19px;
     margin-top: 39px;
+    max-width: 316px;
   }
 
   .dshop .title-section .sub-title {
     font-size: 13px;
     line-height: 1.38;
-    margin-bottom: 32px;
+    margin-bottom: 36px;
+    max-width: 314px;
   }
 
   .dshop .title-section {
@@ -604,18 +638,44 @@
     min-height: 350px;
   }
 
+  .dshop .title-section .primary-button {
+    margin-bottom: 0px;
+  }
+
   .dshop .support-section {
     min-height: 275px;
   }
 
+  .dshop .support-section .support-image {
+    height: 280px;
+  }
+
   .dshop .support-section .support-image.left,
   .dshop .support-section .support-image.right {
+    position:absolute;
     top: 60px;
+    z-index: -1;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .dshop .support-section .support-image.left {
+    left: -320px;
+    right: 0;
+  }
+
+  .dshop .support-section .support-image.right {
+    left: 0;
+    right: -320px;
+  }
+
+  .dshop .support-section-2 {
+    padding-bottom: 31px;
   }
 
   .dshop .support-section-2 .title {
     margin-top: 115px;
-    font-size: 16px;
+    font-size: 17px;
     margin-bottom: 45px;
     margin-left: 25px;
     margin-right: 25px;
@@ -642,6 +702,10 @@
 
   .dshop .support-section-2 .info-box .text {
     font-size: 13px;
+    max-width: 150px;
+    font-weight: normal;
+    letter-spacing: normal;
+    color: #999999;
   }
 
   .dshop .support-section .title {
@@ -659,12 +723,9 @@
     margin-bottom: 28px;
   }
 
-  .dshop .support-section .support-image {
-    height: 141px;
-  }
-
   .dshop .tools-section {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    padding-bottom: 38px;
   }
 
   .dshop .tools-section .title {
@@ -678,11 +739,18 @@
     margin-left: 20px;
     margin-right: 20px;
     text-align: center;
+    margin-bottom: 0px;
+  }
+
+  .dshop .tools-section .brands {
+    margin-bottom: 28px;
+    margin-top: 30px;
   }
 
   .dshop .tools-section .brand-box {
     min-width: 62px;
-    min-height: 62px;    
+    min-height: 62px;
+    margin: 10px;
   }
 
   .dshop .tools-section .stripe {
@@ -719,20 +787,30 @@
     padding-right: 0.5rem;
     padding-top: 47px;
     min-height: 500px;
+    justify-content: flex-start;
+  }
+
+  .dshop .build-section .container {
+    padding-left: 22px;
+    padding-right: 22px;
   }
 
   .dshop .build-section .hero-graphic {
     object-fit: contain;
-    position: relative;
-    height: 300px;
-    margin-bottom: -25px;
-    margin-left: -140px;
-    margin-top: -25px;
+    height: 226px;
   }
 
   .dshop .build-section h1 {
     font-size: 18px;
     line-height: 1.39;
+  }
+
+  .dshop .build-section .sub-title {
+    font-size: 13px;
+  }
+
+  .dshop .build-section a {
+    font-size: 13px; 
   }
 
   .dshop .content-wrapper {
@@ -779,14 +857,14 @@
   .dshop .customers .sub-title {
     font-size: 13px;
     font-weight: normal;
-    margin-bottom: 43px;
+    margin-bottom: 27px;
     margin-left: 20px;
     margin-right: 20px;
   }
 
   .dshop .customer-logos {
     max-width: 90%;
-    margin-bottom: 51px;
+    margin-bottom: 35px;
   }
 
   .dshop .customer-logos img {
@@ -839,6 +917,15 @@
 
   .dshop .feature-box .sub-title {
     font-size: 0.875rem;
+  }
+
+  .dshop .support-section .container {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .dshop .support-section .image-holder {
+    width: 100%;
   }
 
   .dshop .succeed-section {
