--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -41,7 +41,7 @@
           srcset="/static/img/dshop/dshop-art-1@2x.jpg 2x, /static/img/dshop/dshop-art-1@3x.jpg 3x"
         />
         <img
-          class="support-image center"
+          class="support-image center parallax-scroll-faster"
           src="/static/img/dshop/dshop-hardware-1.jpg"
           srcset="/static/img/dshop/dshop-hardware-1@2x.jpg 2x, /static/img/dshop/dshop-hardware-1@3x.jpg 3x"
         />
@@ -149,11 +149,11 @@
           >{{ gettext("Join us on Discord") }} &gt;</a>
         </div>
       </div>
-      <img src="/static/img/dshop/hero-graphic.svg" class="hero-graphic" />
+      <img src="/static/img/dshop/build-section-image.svg" class="hero-graphic" />
     </div>
   </section>
 
-  <section>
+  <section class="customers-section">
     <div class="customers">
       <h3>{{gettext("Our Customers")}}</h3>
       <div class="sub-title">
