--- a/templates/team.html
+++ b/templates/team.html
@@ -392,12 +392,30 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
               </div>
             </div>
 
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-daniel.jpg" class="headshot" alt="Daniel Von Fange headshot" />
+                </div>
+                <div class="name"><a href="https://github.com/DanielVF" target="_blank"
+                  rel="noopener noreferrer">{{ gettext("Daniel Von Fange") }}</a></div>
+                <div class="title">
+                  {{ gettext("Senior Engineer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Daniel brings a strong emphasis on security and data analysis to our team. Daniel has earned a reputation for being able to gather massive amounts of data and create dynamic visualizations at lightning speed.") }}
+                </div>
+              </div>
+            </div>
+
 
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <br><Br>
 
   <section class="advisor-team-section grey-section">
     <div class="container">
