--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -407,6 +407,22 @@
         </div>
       </div>
 
+      <div class="col-md-4 mt-3 mr-auto">
+        <div class="team-member">
+          <div class="headshot-wrapper">
+            <img src="/static/img/headshot-daniel.jpg" class="headshot" alt="Daniel Von Fange headshot" />
+          </div>
+          <div class="name"><a href="https://github.com/DanielVF" target="_blank"
+            rel="noopener noreferrer">{{ gettext("Daniel Von Fange") }}</a></div>
+          <div class="title">
+            {{ gettext("Senior Engineer") }}
+          </div>
+          <div class="bio text-center">
+            {{ gettext("Daniel brings a strong emphasis on security and data analysis to our team. Daniel has earned a reputation for being able to gather massive amounts of data and create dynamic visualizations at lightning speed.") }}
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
