Add OUSD banner and update products page

--- a/static/css/pages/product.css
+++ b/static/css/pages/product.css
@@ -485,6 +485,27 @@
   color: #061d2a;
 }
 
+.product-page .origin-dollar h1 {
+  color: #fff;
+  font-size: 2rem;
+  margin-bottom: 2.25rem;
+}
+
+.product-page .origin-dollar .segment-subtitle {
+  color: #fff;
+  font-size: 1.125rem;
+  margin-bottom: 3rem;
+}
+
+.product-page .origin-dollar a {
+  height: 52px;
+}
+
+.product-page .origin-dollar .prod-image {
+  margin-bottom: 3rem;
+  max-width: 100%;
+}
+
 /* sm + */
 @media (min-width: 576px) {
 
