--- a/templates/product.html
+++ b/templates/product.html
@@ -64,6 +64,16 @@
     <div class="sub-title-footer">{{gettext("...and others")}}</div>
   </div>
 
+  <div class="origin-dollar d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
+    <h1>{{gettext("Origin Dollar")}}</h1>
+    <div class="segment-subtitle mx-3">{{gettext("The first stablecoin that earns a yield while it's still in your wallet.")}}</div>
+    <a class="mb-5 mt-0 btn btn-dark d-flex justify-content-center align-items-center" href="https://ousd.com" target="_blank" rel="noreferrer noopener">
+      {{gettext("Get OUSD")}}</a>
+    <div class="d-flex flex-column flex-md-row marketplace align-items-center align-items-md-start">
+      <img class="prod-image" src="/static/img/ousd/origindollar-screenshots.png" srcset="/static/img/ousd/origindollar-screenshots@2x.png 2x, /static/img/ousd/origindollar-screenshots@3x.png 3x" >
+    </div>
+  </div>
+
   <!-- Buy and Sell on Origin section -->
   <!-- origin-marketplace-0.23.16.apk -->
   <div class="buy-sell-block-1 d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
