--- a/templates/landing.html
+++ b/templates/landing.html
@@ -61,12 +61,12 @@
   <!-- Buy and Sell on Origin section -->
   <!-- origin-marketplace-0.23.16.apk -->
   <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
-    <h1>{{gettext("Origin Platform")}}</h1>
-    <div class="segment-subtitle mx-3">{{gettext("The Origin Platform is revolutionizing how people shop and conduct business online. Create a decentralized e-commerce store and buy and sell on our marketplace app. ")}}</div>
+    <h1>{{gettext("Origin Products")}}</h1>
+    <div class="segment-subtitle mx-3">{{gettext("Origin’s suite of products is revolutionizing how people shop and conduct business online. Buy and sell on our marketplace app, create a decentralized e-commerce store, or stake OGN for great deals.")}}</div>
     <a class="mb-5 mt-0 btn btn-dark d-flex justify-content-center align-items-center" href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">
       {{gettext("Check out our products")}}</a>
     <div class="d-flex flex-column flex-md-row marketplace align-items-center align-items-md-start">
-      <img class="prod-image" src="/static/img/landing/origin-products.png" srcset="/static/img/landing/origin-products@2x.png 2x, /static/img/landing/origin-products@3x.png 3x" >
+      <img class="prod-image" src="/static/img/origin-products.png" srcset="/static/img/origin-products@2x.png 2x, /static/img/origin-products@3x.png 3x" >
     </div>
   </div>
   <!-- The sharing economy section -->
