--- a/static/css/pages/product.css
+++ b/static/css/pages/product.css
@@ -657,6 +657,11 @@
     margin-bottom: 50px;
   }
 
+  .product-page .origin-dollar .btn {
+    width: 100%;
+    max-width: 310px;
+  }
+
   .product-page .dshop-section .bottom img.swag {
     margin-left: 30px;
   }
