--- a/templates/email/welcome1.html
+++ b/templates/email/welcome1.html
@@ -8,13 +8,20 @@
 
 			Thanks for checking out <a href="https://www.originprotocol.com">Origin Protocol</a> and subscribing to our email list. 
 			<br><br>
-			At Origin, our mission is to enable true peer-to-peer commerce. We believe in lowering transaction fees, promoting free and transparent commerce, serving the unbanked, and giving early participants in the community a stake in the network. Here’s a video from Fortune, featuring the founders of Origin sharing their mission to enable true peer-to-peer commerce.
+			Origin is the blockchain platform for decentralized commerce. We make it possible for buyers and sellers to transact without any middlemen.
 			<br><br>
-			<a href="https://www.youtube.com/watch?v=e70bvBw1oOo">
-				<img src="{{universal.BASE_URL }}/static/img/emails/fortune-youtube-screenshot.png" width="100%" />
+			With Dshop, our free and open-source e-commerce platform, anyone can easily create an online store and start selling in minutes. Building a business without any transaction fees is possible today on the the decentralized web.
+			<br><br>
+			<a href="https://www.originprotocol.com/dshop">
+				Learn more about Dshop
 			</a>
 			<br><br>
-			If you have any questions as you’re getting started with <a href="https://www.shoporigin.com">Origin’s decentralized marketplace</a>, please feel free to respond to this email or you can find our entire team on <a href="https://www.originprotocol.com/discord">Discord</a>.
+			Origin Dollar (OUSD) is the first DeFi stablecoin that earns a yield while it’s still in your wallet. It's just as easy to use and spend as Tether (USDT) while automatically earning savings for you at rates that trounce those in traditional finance.
+			<br><br>
+			<a href="https://ousd.com">
+				Get OUSD
+			</a>
+			If you have any questions or want to get involved, just hit reply on this email or reach out to us on <a href="https://www.originprotocol.com/discord">Discord</a>.
 		</td>
 	</tr>
 </table>
