Update products summary

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -62,7 +62,7 @@
   <!-- origin-marketplace-0.23.16.apk -->
   <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <h1>{{gettext("Origin Products")}}</h1>
-    <div class="segment-subtitle mx-3">{{gettext("Origin’s suite of products is revolutionizing how people shop and conduct business online. Buy and sell on our marketplace app, create a decentralized e-commerce store, or stake OGN for great deals.")}}</div>
+    <div class="segment-subtitle mx-3">{{gettext("Origin’s suite of products is revolutionizing how people shop and conduct business online. Effortlessly grow your savings, create a decentralized e-commerce store or buy and sell on our marketplace app.")}}</div>
     <a class="mb-5 mt-0 btn btn-dark d-flex justify-content-center align-items-center" href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">
       {{gettext("Check out our products")}}</a>
     <div class="d-flex flex-column flex-md-row marketplace align-items-center align-items-md-start">
