--- a/templates/footer.html
+++ b/templates/footer.html
@@ -34,6 +34,7 @@
           <div class="col-4 d-flex flex-column">
             <strong>Products</strong>
             <a href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Overview") }}</a>
+            <a href="https://www.ousd.com">{{ gettext("OUSD") }}</a>
             <a href="{{ url_for('dshop', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Dshop") }}</a>
             <a href="{{ universal.DAPP_URL }}">{{ gettext("Marketplace DApp") }}</a>
             <a href="{{ url_for('mobile', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Mobile Apps") }}</a>
