update Cayman address on TOS and privacy docs

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -23,7 +23,7 @@
   <div class="container legal">
     <div class="row">
       <div class="col-12">
-        Last updated: October 30th, 2019<br/>
+        Last updated: October 30th, 2020<br/>
         <br/>
         This privacy policy ("<b>Policy</b>") describes how Origin Protocol Labs and its related companies ("<b>Company</b>") collect, use and share personal information of consumer users of this website, originprotocol.com (the "<b>Site</b>"). This Policy also applies to any of our other websites that post this Policy. This Policy does not apply to websites that post different statements.
         <h4>WHAT WE COLLECT</h4>
@@ -80,9 +80,8 @@
         We welcome your comments or questions about this privacy policy. You may also contact us at our address:
         <br/><br/>
         Origin Protocol Labs<br/>
-        P.O. Box 61, Harbour Centre<br/>
-        George Town, Grand Cayman, KY1-1102<br/>
-        Cayman Islands<br/>
+        Floor 4, Willow House,<br />Cricket Square, Grand Cayman KY1‐9010,<br />Cayman Islands<br/>
+        Email: support@originprotocol.com<br/><br/>
         Email: support@originprotocol.com<br/><br/>
         <h4>CHANGES TO THIS PRIVACY POLICY.</h4>
         We may change this privacy policy at anytime. If we make any changes, we will change the Last Updated date above.
