--- a/templates/tos.html
+++ b/templates/tos.html
@@ -23,7 +23,7 @@
     <div class="container legal">
       <div class="row">
         <div class="col-12">
-          Last updated: October 30th, 2019<br/>
+          Last updated: October 30th, 2020<br/>
           <br/>
           The website located at www.originprotocol.com (the "<b>Site</b>") is a copyrighted work belonging to Origin Protocol Labs ("<b>Company</b>", "<b>us</b>", "<b>our</b>", and "<b>we</b>"). Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features. All such additional terms, guidelines, and rules are incorporated by reference into these Terms.<br/>
           <br/>
@@ -93,9 +93,7 @@
   </li>
   <li><b>Contact Information:</b></li>
   Origin Protocol Labs<br/>
-  P.O. Box 61, Harbour Centre<br/>
-  George Town, Grand Cayman, KY1-1102<br/>
-  Cayman Islands<br/>
+  Floor 4, Willow House,<br />Cricket Square, Grand Cayman KY1‐9010,<br />Cayman Islands<br/>
   Email: support@originprotocol.com<br/><br/>
 </div></div></div>
   </section>
