add banner for users redirected from shoporigin.com to originprotocol.com/dshop

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -112,3 +112,14 @@ main section .btn.btn-inverse.btn-primary {
     font-weight: normal;
   }
 }
+
+.redirected-banner {
+  background-color:black;
+  color:white;
+  padding:20px;
+}
+
+.redirected-banner a {
+  color:white;
+  text-decoration: underline;
+}
