Add stake banner

--- a/templates/ogn-token.html
+++ b/templates/ogn-token.html
@@ -9,14 +9,14 @@ endwith %}
     <div class="container">
       <h2>{{gettext("OGN is Now Trading")}}</h2>
       <div class="d-flex flex-column flex-md-row justify-content-center mb-3">
-        <div class="statistic d-flex flex-column purple">
+        <div class="statistic d-flex flex-column blue">
           <div class="d-flex flex-row">
             <img src="/static/img/ognToken/price-icon.svg" class="mr-2" />
             <div>{{gettext("Last Price")}}</div>
           </div>
           <div class="text">{{ogn_stats["formatted_ogn_usd_price"]}}</div>
         </div>
-        <div class="statistic d-flex flex-column green">
+        <div class="statistic d-flex flex-column blue">
           <div class="d-flex flex-row">
             <img src="/static/img/ognToken/circulating-supply-icon.svg" class="mr-2" />
             <div>{{gettext("Circulating Supply")}}</div>
