--- a/static/css/pages/landing.css
+++ b/static/css/pages/landing.css
@@ -641,7 +641,6 @@
   }
 
   .sharing-economy .pies {
-    max-width: 762px;
     margin-right: 0px;
   }
 
@@ -762,5 +761,12 @@
 
   .landing-page .video-block .video-title {
     max-width: 610px;
+  }
+}
+
+/* - lg */
+@media (max-width: 960px) {
+  .landing-page .prod-image {
+    max-width: 100%;
   }
 }
