Update token page content

--- a/templates/ogn-token.html
+++ b/templates/ogn-token.html
@@ -135,11 +135,8 @@ endwith %}
         <div class="showcase-content">
           <h1 class="mb-3">{{gettext("Staking")}}</h1>
           <p class="mb-3">
-            {{gettext("Stake Origin Tokens (OGN) to activate unbelievable discounts on Origin Deals. 
-            Your tokens get locked up so that you are eligible for discounts, and after some time passes, 
-            you get all your OGN back to use however you want. ")}}
+            {{gettext("Earn interest on your OGN while you hold it. Deposit OGN into our high-yield smart contract to grow your stake in the Origin network.")}}
           </p>
-          <p class="font-italic">Only available in the United States</p>
         </div>
       </div>
     </div>
@@ -150,9 +147,7 @@ endwith %}
         <div class="showcase-content">
           <h1 class="mb-3">{{gettext("Governance")}}</h1>
           <p>
-            {{gettext("Promote your listings across the Origin flagship app and third-party apps with Origin Commissions. 
-            Pay with OGN to get featured prominently in search results. Application developers and marketplace operators 
-            earn Origin Tokens (OGN) by helping sellers complete their sales.")}}
+            {{gettext("Create and vote on proposals determining the future direction of Origin Dollar (OUSD), Dshop and the rest of the Origin platform. Accrue value generated from platform revenues.")}}
           </p>
         </div>
         <div class="showcase-image">
@@ -176,9 +171,7 @@ endwith %}
         <div class="showcase-content">
           <h1 class="mb-3">{{gettext("Commissions")}}</h1>
           <p>
-            {{gettext("Promote your listings across the Origin flagship app and third-party apps with Origin Commissions. 
-            Pay with OGN to get featured prominently in search results. Application developers and marketplace operators 
-            earn Origin Tokens (OGN) by helping sellers complete their sales.")}}
+            {{gettext("Promote your listings across the Origin flagship app and third-party apps with Origin Commissions. Pay with OGN to get featured prominently in search results. Application developers and marketplace operators earn OGN by helping sellers complete their sales.")}}
           </p>
         </div>
       </div>
